--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,17 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragment.SettingFragment">
+    tools:context=".fragment.setting.SettingFragment"
+    android:orientation="vertical">
 
    <com.google.android.material.imageview.ShapeableImageView
+       android:id="@+id/avartar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:shapeAppearanceOverlay="@style/circleImage"
        app:strokeWidth="1dp"
        app:strokeColor="@color/white"
-       android:src="@drawable/ic_gg"/>
+       android:src="@drawable/ic_gg" />
 
-</FrameLayout>
+   <Button
+       android:id="@+id/chonanhdaidien"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="Chọn ảnh đại diện"
+       android:textSize="12sp"
+       android:textColor="@color/black"
+       android:drawableLeft="@drawable/icons8_camera_50"
+       android:background="#00FFFFFF"/>
+</LinearLayout>
