--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,28 +7,35 @@
     tools:context=".fragment.setting.SettingFragment"
     android:orientation="vertical">
 
-   <com.google.android.material.imageview.ShapeableImageView
-       android:id="@+id/avartar"
-       android:layout_width="80sp"
-       android:layout_height="80sp"
-       app:shapeAppearanceOverlay="@style/circleImage"
-       app:strokeWidth="1dp"
-       app:strokeColor="@color/white"
-       android:src="@drawable/ic_gg" />
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+      android:orientation="vertical">
+      <com.google.android.material.imageview.ShapeableImageView
+          android:id="@+id/avartar"
+          android:layout_width="80sp"
+          android:layout_height="80sp"
+          app:shapeAppearanceOverlay="@style/circleImage"
+          app:strokeWidth="1dp"
+          app:strokeColor="@color/white"
+          android:src="@drawable/ic_gg" />
 
-   <Button
-       android:id="@+id/chonanhdaidien"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:text="Chọn ảnh đại diện"
-       android:textSize="12sp"
-       android:textColor="@color/black"
-       android:drawableLeft="@drawable/icons8_camera_50"
-       android:background="#00FFFFFF"/>
-   <EditText
-       android:id="@+id/demo123"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:textSize="20sp"
-       />
-</LinearLayout>
+      <Button
+          android:id="@+id/chonanhdaidien"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="Chọn ảnh đại diện"
+          android:textSize="12sp"
+          android:textColor="@color/black"
+          android:drawableLeft="@drawable/icons8_camera_50"
+          android:background="#00FFFFFF"/>
+      <EditText
+          android:id="@+id/demo123"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:textSize="20sp"
+          />
+
+   </LinearLayout>
+
+</ScrollView>
