--- a/app/src/main/res/layout/activity_search_user.xml
+++ b/app/src/main/res/layout/activity_search_user.xml
@@ -1,46 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".activity.searchuser.SearchUser"
-        android:orientation="vertical">
+        tools:context=".activity.searchuser.SearchUserActivity">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageButton
-                android:id="@+id/btnBack"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:background="@null"
-                android:paddingLeft="8dp"
-                android:src="@drawable/left_arrow_30" />
-
-            <EditText
-                android:id="@+id/keysearch"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="text"
-                android:layout_marginStart="14dp"
-                android:layout_toRightOf="@+id/btnBack"
-                android:hint="Tìm kiếm"
-                android:textSize="16sp"
-                android:gravity="center_vertical"
-                android:maxLines="1"/>
-
+            android:layout_height="wrap_content"
+            android:id="@+id/tool_bar_outside">
+            <include
+                android:id="@+id/search_user_toolbar"
+                layout="@layout/search_user_toolbar"/>
         </RelativeLayout>
 
+
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcv_searchUser"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_below="@id/tool_bar_outside">
 
         </androidx.recyclerview.widget.RecyclerView>
-    </LinearLayout>
+    </RelativeLayout>
 </layout>
 
 
