--- a/app/src/main/res/menu/menu_items.xml
+++ b/app/src/main/res/menu/menu_items.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
     <item
         android:id="@+id/doanchat"
-        android:title="Đoạn Chat"
-        android:icon="@drawable/ic_baseline_message_24"/>
-    <item
-        android:id="@+id/tincho"
-        android:title="Tin Nhắn Chờ"
-        android:icon="@drawable/ic_baseline_access_time_24"/>
+        android:icon="@drawable/ic_baseline_message_24"
+        android:title="Đoạn Chat" />
+
+    <!--    <item-->
+    <!--        android:id="@+id/tincho"-->
+    <!--        android:icon="@drawable/ic_baseline_access_time_24"-->
+    <!--        android:title="Tin Nhắn Chờ" />-->
+
     <item
         android:id="@+id/settings"
-        android:title="Settings"
-        android:icon="@drawable/ic_baseline_settings_24"/>
+        android:icon="@drawable/ic_baseline_settings_24"
+        android:title="Settings" />
+
 </menu>
