--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -7,13 +7,6 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tvSendId"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:text="Send: " />
-
-        <TextView
             android:id="@+id/tvMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -23,8 +16,7 @@
             android:id="@+id/tvCreatedAt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:text="Created at: " />
+            android:padding="5dp" />
 
     </LinearLayout>
 
