--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -24,17 +24,26 @@
           app:strokeColor="@color/white"
           android:src="@drawable/ic_gg" />
 
-      <Button
-          android:id="@+id/chonanhdaidien"
+      <TextView
+          android:id="@+id/txtUsername"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:text="choose avatar"
-          android:textSize="12sp"
+          android:textSize="14sp"
           android:layout_gravity="center_horizontal"
           android:textColor="#fff"
+          android:layout_marginTop="10dp" />
+
+      <Button
+          android:id="@+id/chinhsuathongtin"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:text="edit information"
+          android:textSize="12sp"
+          android:textColor="#fff"
           android:layout_marginTop="15dp"
-          android:drawableLeft="@drawable/icons8_camera_35"
-          android:background="#00FFFFFF"/>
+          android:textAlignment="textStart"
+          android:drawableLeft="@drawable/icons8_user_35"
+          android:backgroundTint="@color/black"/>
 
       <Button
           android:id="@+id/logout"
@@ -46,7 +55,7 @@
           android:textColor="#fff"
           android:textSize="12dp"
           android:backgroundTint="@color/black"
-          android:layout_marginTop="10dp"/>
+          android:layout_marginTop="7dp"/>
 
    </LinearLayout>
 
