--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#808080</color>
     <color name="silver">#C0C0C0</color>
+    
+     //daithem
+    <color name="yellow">#FFC801</color>
 </resources>
