--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <LinearLayout
         android:layout_width="match_parent"
 
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:background="@drawable/header_bg"
         tools:context=".MainActivity">
 
         <TextView
@@ -15,13 +16,13 @@
             android:layout_marginTop="40dp"
             android:gravity="center"
             android:text="Double Talk"
-            android:textColor="#E38A6E"
+            android:textColor="#222222"
             android:textSize="30dp"
             android:textStyle="bold|normal|italic" />
 
         <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="411dp"
+            android:layout_height="562dp"
             android:layout_gravity="center"
             android:layout_marginStart="38dp"
             android:layout_marginTop="50dp"
@@ -33,6 +34,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -52,28 +54,28 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:background="@drawable/switch_trcks"
-                        android:paddingBottom="5dp"
                         android:paddingLeft="40dp"
                         android:paddingTop="5dp"
                         android:paddingRight="15dp"
+                        android:paddingBottom="5dp"
                         android:text="Log In"
-                        android:textColor="#0E0E0E"
-                        android:textSize="16dp"
+                        android:textColor="@color/yellow"
+                        android:textSize="24dp"
                         android:textStyle="bold|normal" />
 
                     <TextView
                         android:id="@+id/signUp"
                         android:layout_width="0dp"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:paddingLeft="15dp"
                         android:paddingTop="5dp"
                         android:paddingRight="15dp"
+                        android:paddingBottom="5dp"
                         android:text="Sign Up"
                         android:textAlignment="center"
-                        android:paddingBottom="5dp"
-                        android:textColor="#0E0E0E"
-                        android:textSize="16dp"
+                        android:textColor="@color/yellow"
+                        android:textSize="24dp"
                         android:textStyle="bold|normal" />
 
                 </LinearLayout>
@@ -88,49 +90,51 @@
                     android:padding="25dp">
 
                     <com.google.android.material.textfield.TextInputLayout
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="5dp"
-                        android:layout_marginRight="5dp"
                         android:layout_marginTop="5dp"
+                        android:layout_marginRight="5dp"
                         android:layout_marginBottom="5dp"
-                        app:shapeAppearanceOverlay="@style/Button4"
+                        android:hint="Email"
                         app:boxStrokeColor="#E88262"
                         app:boxStrokeWidth="1dp"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                        android:hint="Email">
+                        app:shapeAppearanceOverlay="@style/Button4">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:layout_width="match_parent"
-                            android:inputType="textEmailAddress"
                             android:id="@+id/email"
+                            android:background="@drawable/edittext_bg"
+                            android:layout_width="match_parent"
+                            android:layout_height="120px"
                             android:ems="10"
-                            android:textSize="13dp"
-                            android:layout_height="wrap_content" />
+                            android:inputType="textEmailAddress"
+                            android:textSize="13dp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="5dp"
-                        android:layout_marginRight="5dp"
                         android:layout_marginTop="5dp"
+                        android:layout_marginRight="5dp"
                         android:layout_marginBottom="5dp"
-                        app:shapeAppearanceOverlay="@style/Button4"
+                        android:hint="Password"
                         app:boxStrokeColor="#E88262"
                         app:boxStrokeWidth="1dp"
                         app:endIconMode="password_toggle"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                        android:hint="Password">
+                        app:shapeAppearanceOverlay="@style/Button4">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:layout_width="match_parent"
-                            android:inputType="textPassword"
                             android:id="@+id/pasword"
+                            android:layout_width="match_parent"
+                            android:layout_height="120px"
                             android:ems="10"
-                            android:textSize="13dp"
-                            android:layout_height="wrap_content" />
+                            android:background="@drawable/edittext_bg"
+                            android:inputType="textPassword"
+                            android:textSize="13dp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -138,117 +142,128 @@
                         android:id="@+id/txtviewForgotPassword"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Forgot Password ?"
                         android:layout_gravity="end"
-                        android:textStyle="normal"
+                        android:text="Forgot Password ?"
                         android:textColor="#F38B6B"
-                        android:textSize="11dp" />
+                        android:textSize="11dp"
+                        android:textStyle="normal" />
+
                     <Button
                         android:id="@+id/signin"
-                        android:text="Log In"
-                        android:textSize="17sp"
-                        android:textAllCaps="false"
-                        android:elevation="15dp"
-                        android:layout_marginTop="20dp"
-                        android:layout_gravity="center"
-                        app:shapeAppearanceOverlay="@style/Button5"
-                        android:backgroundTint="#F38B6B"
                         android:layout_width="130dp"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="20dp"
+                        android:background="@drawable/button_bg"
+                        android:backgroundTint="#F38B6B"
+                        android:elevation="15dp"
+                        android:text="Log In"
+                        android:textAllCaps="false"
+                        android:textColor="@color/yellow"
+                        android:textSize="17sp"
+                        app:shapeAppearanceOverlay="@style/Button5" />
 
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:id="@+id/signuplayout"
-                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/white"
                     android:gravity="center"
                     android:orientation="vertical"
-                    android:padding="25dp">
+                    android:padding="25dp"
+                    android:visibility="gone">
 
                     <com.google.android.material.textfield.TextInputLayout
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="5dp"
-                        android:layout_marginRight="5dp"
                         android:layout_marginTop="5dp"
+                        android:layout_marginRight="5dp"
                         android:layout_marginBottom="5dp"
-                        app:shapeAppearanceOverlay="@style/Button4"
+                        android:hint="Email"
                         app:boxStrokeColor="#E88262"
                         app:boxStrokeWidth="1dp"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                        android:hint="Email">
+                        app:shapeAppearanceOverlay="@style/Button4">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:layout_width="match_parent"
-                            android:inputType="textEmailAddress"
                             android:id="@+id/signupemail"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
                             android:ems="10"
-                            android:textSize="13dp"
-                            android:layout_height="wrap_content" />
+                            android:background="@drawable/edittext_bg"
+                            android:inputType="textEmailAddress"
+                            android:textSize="13dp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
+
                     <com.google.android.material.textfield.TextInputLayout
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="5dp"
-                        android:layout_marginRight="5dp"
                         android:layout_marginTop="5dp"
+                        android:layout_marginRight="5dp"
                         android:layout_marginBottom="5dp"
-                        app:shapeAppearanceOverlay="@style/Button4"
+                        android:hint="Password"
                         app:boxStrokeColor="#E88262"
                         app:boxStrokeWidth="1dp"
                         app:endIconMode="password_toggle"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                        android:hint="Password">
+                        app:shapeAppearanceOverlay="@style/Button4">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:layout_width="match_parent"
-                            android:inputType="textPassword"
                             android:id="@+id/signuppasword"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
                             android:ems="10"
-                            android:textSize="13dp"
-                            android:layout_height="wrap_content" />
+                            android:background="@drawable/edittext_bg"
+                            android:inputType="textPassword"
+                            android:textSize="13dp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
+
                     <com.google.android.material.textfield.TextInputLayout
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginLeft="5dp"
-                        android:layout_marginRight="5dp"
                         android:layout_marginTop="5dp"
+                        android:layout_marginRight="5dp"
                         android:layout_marginBottom="5dp"
-                        app:shapeAppearanceOverlay="@style/Button4"
+                        android:hint="ConfirmPassword"
                         app:boxStrokeColor="#E88262"
                         app:boxStrokeWidth="1dp"
                         app:endIconMode="password_toggle"
-                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                        android:hint="ConfirmPassword">
+                        app:shapeAppearanceOverlay="@style/Button4">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:layout_width="match_parent"
-                            android:inputType="textPassword"
                             android:id="@+id/signupretypepasword"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
                             android:ems="10"
-                            android:textSize="13dp"
-                            android:layout_height="wrap_content" />
+                            android:background="@drawable/edittext_bg"
+                            android:inputType="textPassword"
+                            android:textSize="13dp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
+
                     <Button
                         android:id="@+id/signup"
-                        android:text="Register"
-                        android:textSize="17sp"
-                        android:textAllCaps="false"
-                        android:elevation="15dp"
-                        android:layout_marginTop="20dp"
-                        android:layout_gravity="center"
-                        app:shapeAppearanceOverlay="@style/Button5"
-                        android:backgroundTint="#F38B6B"
                         android:layout_width="130dp"
-                        android:layout_height="wrap_content"/>
-
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="20dp"
+                        android:backgroundTint="#F38B6B"
+                        android:elevation="15dp"
+                        android:text="Register"
+                        android:textColor="@color/yellow"
+                        android:background="@drawable/button_bg"
+                        android:textAllCaps="false"
+                        android:textSize="17sp"
+                        app:shapeAppearanceOverlay="@style/Button5" />
 
 
                 </LinearLayout>
@@ -256,37 +271,42 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_marginTop="10dp"
                     android:text="OR"
-                    android:layout_gravity="center"
-                    android:textSize="20dp"
-                    android:textColor="@color/black"/>
+                    android:textColor="@color/black"
+                    android:textSize="20dp" />
+
                 <LinearLayout
-                    android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="10dp"
                     android:orientation="horizontal">
+
                     <ImageView
-                        android:layout_marginLeft="50dp"
-                        android:src="@drawable/ic_face"
                         android:layout_width="45dp"
-                        android:layout_height="45dp"/>
+                        android:layout_height="45dp"
+                        android:layout_marginLeft="2dp"
+                        android:src="@drawable/ic_face" />
+
                     <com.google.android.material.imageview.ShapeableImageView
                         android:layout_width="45dp"
                         android:layout_height="45dp"
                         android:layout_marginLeft="33dp"
+                        android:src="@drawable/ic_gg"
                         app:shapeAppearanceOverlay="@style/circleImage"
-                        app:strokeWidth="1dp"
                         app:strokeColor="@color/white"
-                        android:src="@drawable/ic_gg"/>
+                        app:strokeWidth="1dp" />
+
                     <com.google.android.material.imageview.ShapeableImageView
                         android:layout_width="45dp"
                         android:layout_height="45dp"
-                        app:shapeAppearanceOverlay="@style/circleImage"
-                        app:strokeWidth="1dp"
                         android:layout_marginLeft="33dp"
+                        android:src="@drawable/ic_ig"
+                        app:shapeAppearanceOverlay="@style/circleImage"
                         app:strokeColor="@color/white"
-                        android:src="@drawable/ic_ig"/>
+                        app:strokeWidth="1dp" />
                 </LinearLayout>
 
             </LinearLayout>
